<resources>
    <string name="About">about</string>
    <string name="Descr">Daily Horoscope is an application developed to provide day to day horoscope.</string>
    <string name="alarm_service_label">Hello</string>
    <string name="hello">Hello</string>
    <string name="app_name">Horoscope Daily</string>
    <string name="name">Name: </string>
    <string name="button1">Save</string>
    <string name="hint1">Enter your name here</string>
    <string name="welcome">Hello</string>
    <string name="welcome2">, chose your zodiac sign and see what the future holds for you</string>
    <string name="aqua">Aqua</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="capri">Capricorn</string>
    <string name="leo">Leo</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="virgo">Virgo</string>
    <string name="scorpio">Scorpio</string>
    <string name="libra">Libra</string>
    <string name="sagitt">Sagittarius</string>
    <string name="notification">Horoscope</string>
    <color name="peach">#eeb45f</color>
    <string name="title_activity_setting">Settings</string>
    <string name="pickDate">Pick Date</string>
    <string name="zodiac">Dont know your zodiac sign?</string>
    <string name="send_to">Send to...</string>
    <string name="information">Enable/Disable your daily notification</string>
    <string name="checkinformation">Check the information about our app</string>
    <string name="chooseSign">Swipe to choose your zodiac sign</string>
    <string name="dontKnowZodiac">Don`t know which is your zodiac sign?</string>
    <string name="viewAllZodiac">View the whole zodiac</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="zodiacDates">
        Aquarius January 20 - February 18\n
        Pisces February 19 - March 20 \n
        Aries March 21 - April 19 \n
        Taurus April 20 - May 20 \n
        Gemini May 21 - June 20 \n
        Cancer June 21 - July 22 \n
        leo July 23 - August 22 \n
        Virgo August 23 - September 22 \n
        Libra September 23 - October 22 \n
        Scorpio October 23 - November 21 \n
        Sagittarius November 22 - December 21 \n
        Capricorn December 22 - January 19 \n
    </string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_opening"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ADev Software</string>
    <string name="nav_header_subtitle">aboutadgroup@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
