<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context="com.example.alex.daily_horoscope.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
         />
    <Button
        android:id="@+id/dbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/pickDate"
        android:layout_below="@+id/line4"
        android:layout_centerHorizontal="true"/>
<LinearLayout
    android:id="@+id/textline1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignStart="@+id/line1"
    android:layout_below="@id/textView2"
    android:paddingStart="65dp"
    >
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aqua"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pisces"
        android:layout_alignStart="@+id/tv1"
        android:layout_marginStart="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aries"
        android:layout_alignStart="@+id/tv2"
        android:layout_marginStart="48dp"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/line1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_below="@id/textline1"
    >

    <ImageButton
        android:id="@+id/bAquarius"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/aqua_button" />

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bPisces"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/pisces_button"/>

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bAries"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/aries_button"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/textline2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@+id/line1"
        android:layout_below="@+id/line1"
        android:paddingStart="65dp"
        >
        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taurus"/>
        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gemini"
            android:layout_alignStart="@+id/tv1"
            android:layout_marginStart="45dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancer"
            android:layout_alignStart="@+id/tv2"
            android:layout_marginStart="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textline2"
        android:gravity="center">
    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bTaurs"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/taurus_button">

    </ImageButton>
    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bGemini"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/gemini_button">

    </ImageButton>
    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bCancer"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/cancer_button"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/textline3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@+id/line1"
        android:layout_below="@+id/line2"
        android:paddingStart="65dp"
        >
        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leo"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virgo"
            android:layout_alignStart="@+id/tv1"
            android:layout_marginStart="55dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libra"
            android:layout_alignStart="@+id/tv2"
            android:layout_marginStart="55dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textline3"
        android:gravity="center">
    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bLeo"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/leo_button"/>

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bVirgo"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/virgo_button"/>

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bLibra"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/libra_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/textline4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@+id/line1"
        android:layout_below="@+id/line3"
        android:paddingStart="65dp"
        >
        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorpio"/>
        <TextView
            android:id="@+id/tv11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sagitt"
            android:layout_alignStart="@+id/tv1"
            android:layout_marginStart="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancer"
            android:layout_alignStart="@+id/tv2"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textline4"
        android:id="@+id/line4"
        android:gravity="center">
    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bScorpio"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/scorpio_button"/>

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bSagittarius"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/sagittarius_button"/>

    <ImageButton
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:id="@+id/bCapricorn"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:src="@drawable/capricorn_button"/>
    </LinearLayout>

</RelativeLayout>
